<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/Enum1"
        android:textColor="#292727"
        android:textColorHighlight="#131313"
        android:textColorHint="#131212"
        app:layout_constraintBottom_toTopOf="@+id/txtnum1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="302dp"
        android:layout_height="54dp"
        android:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="num1"
        android:ems="10"
        android:hint="@string/Enum1"
        android:inputType="textPersonName"
        android:textColor="#121111"
        android:textColorHighlight="#0E0000"
        android:textColorHint="#151515"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="287dp"
        android:layout_height="64dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/Enum2"
        android:textColor="#121111"
        android:textColorHint="#0B0A0A"
        app:layout_constraintBottom_toTopOf="@+id/txtnum2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="261dp"
        android:layout_height="53dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/Enum2"
        android:inputType="textPersonName"
        android:textColor="#121111"
        android:textColorHint="#151414"
        app:layout_constraintBottom_toTopOf="@+id/lblresult"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblresult"
        android:layout_width="123dp"
        android:layout_height="33dp"
        android:layout_marginBottom="232dp"
        android:text="@string/resultado"
        android:textColor="#121111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btncalcula"
        android:layout_width="126dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/letrobtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblresult" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="72dp"
        android:text="@string/Titulo"
        android:textColor="#171616"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>